--- a/stylesLogin.css
+++ b/stylesLogin.css
@@ -17,40 +17,56 @@ body {
 
 .container {
     display: flex;
-    border: 4px solid var(--cor-primaria);
+    padding: 50px;
+    background-color: #fff;
     border-radius: 5px;
     overflow: hidden;
     width: 1000px;
+    height: 600px;
+}
+
+.image-container, .login-container {
+    display: flex;
+    justify-content: center;
+    align-items: center; /* Alinhamento vertical */
 }
 
 .image-container {
-    width: 50%; /* Ajuste conforme necessário */
+    width: 50%; /* 50% para a imagem */
 }
 
 .image-container img {
-    width: 500px;
-    height: 500px;
+    max-width: 100%;
+    height: auto;
 }
+
+
 
 .login-container {
     padding: 20px;
-    width: 50%; /* Ajuste conforme necessário */
+    width: 50%;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 h1 {
     color: var(--cor-secundaria);
-    margin-bottom: 20px;
+    margin-bottom: 50px;
+    font-size: 50px;
 }
 
 form {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    width: 100%; /* Ocupa todo o espaço horizontal */
 }
 
 input {
     padding: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 20px; /* Aumentando a margem inferior para separar mais do botão */
     border: 1px solid var(--cor-secundaria);
     border-radius: 5px;
     width: 300px;
@@ -64,12 +80,19 @@ button {
     border-radius: 5px;
     cursor: pointer;
     width: 300px;
+    text-align: center;
+    margin-top: 20px; /* Adicionando margem superior ao botão para mais espaçamento */
 }
+
 
 button:hover {
     background-color: #007bb5;
 }
 
 p {
-    margin-top: 10px;
+    margin-top: 20px; /* Espaçamento para separar do botão */
+    font-size: 14px;
+    color: var(--cor-secundaria);
+    text-decoration: underline;
+    cursor: pointer;
 }
